cmake_minimum_required(VERSION 3.3)
cmake_policy(SET CMP0058 NEW)
enable_testing()
project(test-c)
include(../../PrecompiledHeader.cmake)
if(MSVC)
  add_definitions(-D_CRT_SECURE_NO_WARNINGS)
  set(pch_source test-pch.c)
endif()
add_executable(test-c test-c.c test-pch.h ${pch_source})
add_precompiled_header(test-c test-pch.h)
add_test(test-c test-c)
