cmake_minimum_required(VERSION 3.3)
cmake_policy(SET CMP0058 NEW)
enable_testing()
project(test-cxx-force)
include(../../PrecompiledHeader.cmake)
if(MSVC)
  add_definitions(-D_CRT_SECURE_NO_WARNINGS)
  set(pch_source test-pch.cpp)
endif()
add_executable(test-cxx-force test-cxx-force.cpp test-pch.h ${pch_source})
add_precompiled_header(test-cxx-force test-pch.h FORCEINCLUDE)
add_test(test-cxx-force test-cxx-force)
