cmake_minimum_required(VERSION 3.3)
cmake_policy(SET CMP0058 NEW)
enable_testing()
project(test-mixed)
include(../../PrecompiledHeader.cmake)
if(MSVC)
  add_definitions(-D_CRT_SECURE_NO_WARNINGS)
  set(pch_source test-pch.c test-pch.cpp)
endif()
add_executable(test-mixed test-mixed.c test-mixed.cpp test-pch.h ${pch_source})
add_precompiled_header(test-mixed test-pch.h)
add_test(test-mixed test-mixed)
